--- a/src/postCrud.html
+++ b/src/postCrud.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <main>
-        <header>
-            <h1>Crea/Modifica Post</h1>
-        </header>
+        <nav>
+            <pw-menu></pw-menu>
+        </nav>
+        <h1>Crea/Modifica Post</h1>
         <form action="#" id="postForm">
             <input type="text" name="title" id="title" placeholder="titolo">
             <input type="text" name="body" id="body" placeholder="testo">
