--- a/src/posts.html
+++ b/src/posts.html
@@ -8,10 +8,10 @@
 <body>
     
     <main>
-        <header>
-            <h1>I tuoi posts</h1>
-            <a href="postCrud.html">nuovo</a>   
-        </header>
+        <nav>
+            <pw-menu></pw-menu>
+        </nav>
+        <h1>I tuoi posts</h1>
         <section>
 
         </section>
