--- a/src/registration.html
+++ b/src/registration.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Registrati</h1>
-    <form action="#" method="POST">
-        <input type="text" name="firstName" id="firstName" placeholder="nome" required>
-        <input type="text" name="lastName" id="lastName" placeholder="cognome" required>
-        <input type="date" name="birthDate" id="birthDate" placeholder="data di nascita" required>
-        <input type="text" name="usr" id="usr" placeholder="username" required>
-        <input type="text" name="pwd" id="pwd" placeholder="password" required>
-        <input type="submit" value="Salva" >
-    </form>
+    <main>
+        <nav>
+            <pw-menu></pw-menu>
+        </nav>
+        <section>
+            <h1>Registrati</h1>
+            <form action="#" method="POST">
+                <input type="text" name="firstName" id="firstName" placeholder="nome" required>
+                <input type="text" name="lastName" id="lastName" placeholder="cognome" required>
+                <input type="date" name="birthDate" id="birthDate" placeholder="data di nascita" required>
+                <input type="text" name="usr" id="usr" placeholder="username" required>
+                <input type="text" name="pwd" id="pwd" placeholder="password" required>
+                <input type="submit" value="Salva" >
+            </form>
+        </section>
+    </main>
+    
     <script src="registration.js" type="module"></script>
 </body>
 </html>
