--- a/src/posts.html
+++ b/src/posts.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posts</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Blog Posts App</title>
 </head>
+
 <body>
-    
     <main>
+        <header>
+            <p>Blog Posts App</p>
+        </header>
         <nav>
             <pw-menu></pw-menu>
         </nav>
-        <h1>I tuoi posts</h1>
-        <section>
+        <section class="view">
+            <h1>I tuoi posts</h1>
+            <article>
 
+            </article>
         </section>
         <footer>
-
+            <p>powered by TSS 2020</p>
         </footer>
     </main>
     <script src="posts.js" type="module"></script>
-    
+
 </body>
+
 </html>
