--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Blog Posts App</title>
 </head>
 <body>
     <main>
+        <header>
+            <p>Blog Posts App</p>
+        </header>
         <nav >
             <pw-menu ></pw-menu>
         </nav>
-        <section>
+        <section class="view">
             
         </section>
+        <footer>
+            <p>powered by TSS 2020</p>
+        </footer>
     </main>
     <script src="index.js" type="module"></script>
 </body>
