--- a/src/login.html
+++ b/src/login.html
@@ -4,16 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
     <link rel="stylesheet" href="style.css">
+    <title>Blog Posts App</title>
 </head>
 
 <body>
     <main>
-        <nav>
-            <pw-menu></pw-menu>
+        <header>
+            <p>Blog Posts App</p>
+        </header>
+        <nav >
+            <pw-menu ></pw-menu>
         </nav>
-        <section>
+        <section class="view">
             <h1>Login</h1>
             <form action="#" method="POST">
                 <input type="text" name="usr" id="usr" placeholder="username" required>
@@ -22,8 +25,10 @@
                 <a href="registration.html">registrati</a>
             </form>
         </section>
+        <footer>
+            <p>powered by TSS 2020</p>
+        </footer>
     </main>
-
     <script src="login.js" type="module"></script>
 </body>
 
