layout grid and flex

--- a/src/login.html
+++ b/src/login.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Blog Posts App</title>
+    <title>Projectwork App</title>
 </head>
 
 <body>
     <main>
         <header>
-            <p>Blog Posts App</p>
+            <p>Projectwork</p>
         </header>
         <nav >
             <pw-menu ></pw-menu>
@@ -22,7 +22,6 @@
                 <input type="text" name="usr" id="usr" placeholder="username" required>
                 <input type="password" name="pwd" id="pwd" placeholder="password" required>
                 <input type="submit" value="Invia">
-                <a href="registration.html">registrati</a>
             </form>
         </section>
         <footer>
