--- a/src/posts.html
+++ b/src/posts.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Blog Posts App</title>
+    <title>Projectwork App</title>
 </head>
 
 <body>
     <main>
         <header>
-            <p>Blog Posts App</p>
+            <p>Projectwork</p>
         </header>
         <nav>
             <pw-menu></pw-menu>
